<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/margin_medium_2">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:id="@+id/tvYear"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="Year : 2008"
                    android:paddingTop="@dimen/margin_medium"
                    android:paddingBottom="@dimen/margin_medium"
                    android:paddingStart="@dimen/margin_medium"
                    android:textSize="@dimen/text_regular_2x"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold"/>
            <ImageView
                    android:id="@+id/ivOverall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_medium"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_trending_down_24dp"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:text="@string/quarter"
                    android:textColor="@color/primary_text"
                    style="@style/QuarterItemStyle"/>
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/vol_of_mob_data"
                    android:textColor="@color/secondary_text"
                    style="@style/QuarterItemStyle"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:text="@string/quarter1"
                    android:textColor="@color/primary_text"
                    style="@style/QuarterItemStyle"/>
            <TextView
                    android:id="@+id/tvQ1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.000543"
                    android:drawableEnd="@drawable/ic_arrow_upward_24dp"
                    android:paddingEnd="@dimen/margin_medium"
                    android:textColor="@color/secondary_text"
                    style="@style/QuarterItemStyle"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:text="@string/quarter2"
                    android:textColor="@color/primary_text"
                    style="@style/QuarterItemStyle"/>
            <TextView
                    android:id="@+id/tvQ2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.000543"
                    android:drawableEnd="@drawable/ic_arrow_upward_24dp"
                    android:paddingEnd="@dimen/margin_medium"
                    android:textColor="@color/secondary_text"
                    style="@style/QuarterItemStyle"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:text="@string/quarter3"
                    android:textColor="@color/primary_text"
                    style="@style/QuarterItemStyle"/>
            <TextView
                    android:id="@+id/tvQ3"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.000543"
                    android:drawableEnd="@drawable/ic_arrow_downward_24dp"
                    android:paddingEnd="@dimen/margin_medium"
                    android:textColor="@color/secondary_text"
                    style="@style/QuarterItemStyle"/>
        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <TextView
                    android:layout_width="0dp"
                    android:layout_weight=".5"
                    android:text="@string/quarter4"
                    android:textColor="@color/primary_text"
                    style="@style/QuarterItemStyle"/>
            <TextView
                    android:id="@+id/tvQ4"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="0.000543"
                    android:drawableEnd="@drawable/ic_arrow_upward_24dp"
                    android:paddingEnd="@dimen/margin_medium"
                    android:textColor="@color/secondary_text"
                    style="@style/QuarterItemStyle"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>